tests/ui/errors/snapshots/parse_go_channel_send.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:6]
 2 │ fn test(ch: Channel<int>) {
 3 │   ch <- 42;
   ·      ─┬
   ·       ╰── invalid syntax
 4 │ }
   ╰────
  help: Use `ch.Send(value)` inside a `select` expression · code: [parse.syntax_error]
